kubernetes/apps/kube-system/cilium/app/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hubble-ui
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
    external-dns.alpha.kubernetes.io/is-public: "true"
spec:
  hosts:
    - hubble.${SECRET_DOMAIN}
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: hubble-ui.kube-system.svc.cluster.local
            port:
              number: 80
